data/derived/sp14/progs/unify/prog4570.ml.out
Characters 22-25:
  let a = int_of_string '3';;
                        ^^^
Error: This expression has type char but an expression was expected of type
         string
